# QtSingleInstance

./: CMakeLists.txt  README.md  main.cpp  singleinstance.cpp  singleinstance.h
